# cabin_dog

./: .gitignore  README.md  pyproject.toml
client/: app.js  index.html  package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
client/src/: App.js  app.js  app.sass  auth.js  client.js  index.html  main.js  network.js  store.js  utils.js
client/src/components/: Button.js  ContentModal.js  LoadingAnimation.js  LoadingModal.js  Modal.js  calculationModal.js  currencyDisplay.js  expenseListDisplay.js  itemModal.js  modal.js
client/src/features/expenses/: expensesSlice.js  (+3 more)
server/: pyproject.toml  pytest.ini  requirements.txt
server/expenses/: auth.py  calculation.py  models.py  serializers.py  tests.py  utils.py  views.py
server/expenses/migrations/: 0001_initial.py  0002_rename_payed_by_expense_paid_by.py  0003_expense_recurs_monthly.py  0004_payspace_expense_pay_space_person_pay_spaces.py  0005_payspace_allowed_users_remove_person_pay_spaces_and_more.py  0006_rename_pay_spaces_person_pay_space_expenseuser.py  0007_remove_payspace_allowed_users_and_more.py  0008_rename_expenseuser_device.py  0009_remove_device_pay_space_device_person_and_more.py  0010_alter_device_person_alter_person_pay_space_payment_and_more.py  0011_expense_settled.py  0012_remove_expense_settled_alter_expense_payment.py  0013_remove_payment_date_payment_timestamp.py  0014_person_user_delete_device.py  0015_multitoken.py  0016_person_reference.py
server/server/: settings.py  settings_common.py  settings_dev.py  settings_prod.py  urls.py  wsgi.py
(+6 files in other folders)
